crates/strider-analyze/tests/snapshots/v3__ppc64be__complex__bit_test_zero.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10010284:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "11" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "16" -> "12" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ f2", shape=house, fillcolor="#163030"];
  "10" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v18" [color="#888888", style=dashed];
  "v18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v19" [color="#888888", style=dashed];
  "v19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1001026c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "24" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "32" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "41" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="StackStore u64\n→ ram[sp - 128]", shape=box3d, fillcolor="#20182a"];
  "43" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "45" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "48" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "45" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="φ f1", shape=house, fillcolor="#163030"];
  "10" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v51" [color="#888888", style=dashed];
  "v51" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v52" [color="#888888", style=dashed];
  "v52" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ r4", shape=house, fillcolor="#163030"];
  "10" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v53" [color="#888888", style=dashed];
  "v53" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v54" [color="#888888", style=dashed];
  "v54" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="φ Val", shape=house, fillcolor="#163030"];
  "10" -> "55" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "58" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "5" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "11" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "69" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "82" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "82" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "84" -> "82" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "78" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "86" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "87" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "86" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "88" -> "86" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "88" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "88" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "89" -> "88" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
